# hdf5-ocaml

./: .gitignore  .ocamlformat  README.md  dune-project  hdf5-caml.opam
examples/bench/: bench_struct.ml
examples/examples/: h5_interm_group.ml
examples/examples-by-api/: h5ex_g_traverse.ml
examples/h5_intro/: check_and_read_example.ml  compound.ml  create_example.ml  create_extend_write.ml  create_groups.ml  create_write_ref_obj.ml  create_write_ref_reg.ml  read_extended.ml  read_ref_obj.ml  read_ref_reg.ml  read_write_attributes.ml  write_selected.ml
examples/hl/: ex_lite1.ml  ex_lite2.ml  ex_lite3.ml  ex_table_01.ml  ex_table_02.ml  ex_table_03.ml
examples/misc-examples/: attrs.ml  crtstr.ml  mafisc.ml  varlen.ml  vlstra.ml
src/caml/: dune  field.ml  field.mli  float_intf.ml  h5.ml  h5.mli  hdf5_caml.ml  struct.ml  struct.mli  struct_intf.ml  type.ml  type.mli
src/raw/: dune  h5_raw.ml  h5_raw.mli  h5a.ml  h5a.mli  h5d.ml  h5d.mli  h5d_stubs.c  h5f.ml  h5f.mli  h5g.ml  h5g.mli  h5i.ml  h5i.mli  h5l.ml  h5l.mli  h5lt.ml  h5lt.mli  h5o.ml  h5o.mli  h5p.ml  h5p.mli  h5r.ml  h5r.mli  h5s.ml  h5s.mli  h5t.ml  h5t.mli  h5tb.ml  h5tb.mli  h5z.ml  h5z.mli  hdf5_raw.ml  hsize.ml  hsize.mli  layout.ml
src/raw/config/: discover.ml  dune
test/: comprehensive.ml  test_h5tb.ml  test_struct.ml
